jicofo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jicofo
  name: jicofo
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jicofo
  template:
    metadata:
      labels:
        k8s-app: jicofo
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo
          imagePullPolicy: Always
