jvb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jvb
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jvb
  template:
    metadata:
      labels:
        k8s-app: jvb
    spec:
      containers:
        - name: jvb
          image: jitsi/jvb
          imagePullPolicy: Always
          ports:
          - containerPort: 10000
            protocol: UDP
          - containerPort: 4443
            protocol: TCP
