jvb-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jvb
  namespace: jitsi
spec:
  serviceName: jvb
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
        - name: jvb
          image: jitsi/jvb
          imagePullPolicy: Always
