prosody-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: prosody
  name: prosody
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: prosody
  template:
    metadata:
      labels:
        k8s-app: prosody
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody
          imagePullPolicy: Always
          ports:
            - containerPort: 5222
              protocol: TCP
              name: xmpp-client
            - containerPort: 5269
              protocol: TCP
              name: xmpp-s2s
            - containerPort: 5280
              protocol: TCP
              name: bosh-http
            - containerPort: 5347
              protocol: TCP
              name: components
            - containerPort: 5281
              protocol: TCP
              name: bosh-https
