jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: jvb
  name: jvb-tcp
  namespace: jitsi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.171
  ports:
  - name: "4443"
    port: 4443
    targetPort: 4443
  selector:
    k8s-app: jvb
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: jvb
  name: jvb-udp
  namespace: jitsi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.172
  ports:
  - name: "10000"
    port: 10000
    protocol: UDP
    targetPort: 10000
  selector:
    k8s-app: jvb
status:
  loadBalancer: {}
