web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-appe: web
  name: web
  namespace: jitsi
spec:
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
#     nodePort: 30080
    - name: "https"
      protocol: TCP
      port: 443
      targetPort: 443
#     nodePort: 30443
  selector:
    k8s-app: web
  type: ClusterIP
